--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -5,19 +5,12 @@
 		<title>Használt Autó Fotózás | Add el gyorsabban, több pénzért, kevesebb macerával.</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<meta name="description" content="Használt autó fotózás Budapesten. 12 profi kép aznapi kézbesítéssel, hirdetéshez optimalizálva. Tűnj ki a hirdetések közül, add el gyorsabban!">
+		<meta name="description" content="12 profi kép aznapi kézbesítéssel. Hirdetéshez optimalizált fotók, gyorsabb eladás, kevesebb alkudozás.">
 		<link rel="canonical" href="https://hasznaltautofotozas.hu/">
 
 		<!-- Styles -->
 		<link rel="stylesheet" href="/assets/css/style.css">
-
-		<!-- Google Icons & Fonts -->
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-
-		<!-- Font Awesome -->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link rel="stylesheet" href="/assets/css/fontawesome.css">
 
 		<!-- Favicons -->
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
@@ -31,15 +24,22 @@
 		<meta name="theme-color" content="#ffffff">
 
 		<!-- OpenGraph -->
-		<meta name="twitter:card" content="summary">
+		<meta property="og:type" content="website">
+		<meta property="og:site_name" content="Használt Autó Fotózás">
+		<meta property="og:url" content="https://hasznaltautofotozas.hu/">
+		<meta property="og:locale" content="hu_HU">
+		<meta property="og:title" content="Használt Autó Fotózás | Add el gyorsabban, több pénzért, kevesebb macerával.">
+		<meta property="og:description" content="12 profi kép aznapi kézbesítéssel. Hirdetéshez optimalizált fotók, gyorsabb eladás, kevesebb alkudozás.">
+		<meta property="og:image" content="https://hasznaltautofotozas.hu/assets/images/og_image.webp">
+
+		<!-- Twitter/X Card -->
+		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:site" content="@szabokaphoto">
 		<meta name="twitter:creator" content="@szabokaphoto">
-		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://hasznaltautofotozas.hu">
-		<meta property="og:image" content="https://hasznaltautofotozas.hu/assets/images/opengraph.webp" loading="lazy">
-		<meta property="og:image:alt" content="Használt Autó Fotózás | Add el gyorsabban, több pénzért, kevesebb macerával.">
-		<meta property="og:description" content="Használt autó fotózás Budapesten. 12 profi kép aznapi kézbesítéssel, hirdetéshez optimalizálva. Tűnj ki a hirdetések közül, add el gyorsabban!">
-		<meta property="og:title" content="Használt Autó Fotózás | Add el gyorsabban, több pénzért, kevesebb macerával.">
+		<meta name="twitter:title" content="Használt Autó Fotózás | Add el gyorsabban, több pénzért, kevesebb macerával.">
+		<meta name="twitter:description" content="12 profi kép aznapi kézbesítéssel. Hirdetéshez optimalizált fotók, gyorsabb eladás, kevesebb alkudozás.">
+		<meta name="twitter:image" content="https://hasznaltautofotozas.hu/assets/images/og_image.webp">
+		<meta name="twitter:image:alt" content="Használt Autó Fotózás | Add el gyorsabban, több pénzért, kevesebb macerával.">
 
 		<!-- Ahrefs Analytics -->
 		<script src="https://analytics.ahrefs.com/analytics.js" data-key="3fFNg02C3K8g1RxCZId+tQ" async></script>
