--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -9,7 +9,8 @@
 		<link rel="canonical" href="https://hasznaltautofotozas.hu/">
 
 		<!-- Styles -->
-		<link rel="stylesheet" href="/assets/css/style.css">
+		<link rel="preload" href="/assets/css/style.css" as="style" onload="this.rel='stylesheet'">
+		<noscript><link rel="stylesheet" href="/assets/css/style.css"></noscript>
 		<link rel="stylesheet" href="/assets/css/fontawesome.css">
 
 		<!-- Favicons -->
