--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1113,6 +1113,13 @@ body.lightbox-open {
 	overflow: hidden;
 }
 
+.lightbox__overlay {
+	position: absolute;
+	z-index: 1;
+	inset: 0;
+	cursor: zoom-out;
+}
+
 .lightbox {
 	display: none;
 	overflow: hidden;
