--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1118,22 +1118,34 @@ body.lightbox-open {
 	z-index: 1;
 	inset: 0;
 	cursor: zoom-out;
+	transition: background .3s ease;
 }
 
 .lightbox {
-	display: none;
 	overflow: hidden;
+	visibility: hidden;
+	pointer-events: none;
 	position: fixed;
 	z-index: 99;
-	width: 100%;
-	height: 100%;
+	opacity: 0;
+	inset: 0;
+	display: flex;
 	align-items: center;
 	justify-content: center;
+	width: 100%;
+	height: 100%;
 	background: rgba(0,0,0,.9);
+	transition: opacity .3s ease, visibility .3s ease;
 }
 
-.lightbox.active {
-	display: flex;
+.lightbox--active {
+	opacity: 1;
+	visibility: visible;
+	pointer-events: auto;
+}
+
+.lightbox:not(.lightbox--active) {
+	pointer-events: none;
 }
 
 .lightbox__container {
@@ -1148,24 +1160,22 @@ body.lightbox-open {
 	position: absolute;
 	top: 50%;
 	left: 50%;
+	opacity: 0;
 	max-width: 100%;
 	max-height: 100%;
-	transform: translate(-50%, -50%);
 	object-fit: contain;
-	opacity: 0;
+	transition: opacity 0.4s ease;
+	transform: translate(-50%, -50%);
 }
 
-.lightbox__image--prev {
+.lightbox__image--prev,
+.lightbox__image--next {
 	z-index: 1;
 }
 
 .lightbox__image--current {
 	opacity: 1;
 	z-index: 2;
-}
-
-.lightbox__image--next {
-	z-index: 1;
 }
 
 .lightbox__caption {
