--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -562,16 +562,32 @@ figcaption {
 }
 
 .slider {
-	/* TODO */
+	position: relative;
+	display: grid;
+	justify-items: center;
+	align-content: start;
 }
 
 .slide {
+	grid-area: 1 / 1;
+	opacity: 0;
+	inset: 0;
 	display: grid;
 	justify-items: center;
+	transition: opacity .75s ease;
+	pointer-events: none;
+}
+
+.slide--active {
+	opacity: 1;
+	z-index: 1;
+	pointer-events: auto;
+	transition-delay: 0.25s;
 }
 
 .slide__image {
 	position: relative;
+	background-color: #FFF;
 }
 
 .slide__image--before {
@@ -614,10 +630,31 @@ figcaption {
 	}
 }
 
-@media only screen and (min-width: 576px) {
-	. {
+.slider-pagination {
+	display: flex;
+	justify-content: center;
+	gap: 0.75rem;
+	margin-top: 2rem;
+}
 
-	}
+.slider-dot {
+	cursor: pointer;
+	width: 1rem;
+	height: 1rem;
+	padding: .75rem;
+	border: none;
+	border-radius: 50%;
+	background: rgba(255,255,255,.125);
+	transition: background .3s ease, transform .3s ease;
+}
+
+.slider-dot:hover {
+	transform: scale(1.5);
+	background: rgba(255,255,255,.25);
+}
+
+.slider-dot--active {
+	background: rgba(255,255,255,.5);
 }
 
 
@@ -1118,7 +1155,6 @@ body.lightbox-open {
 	z-index: 1;
 	inset: 0;
 	cursor: zoom-out;
-	transition: background .3s ease;
 }
 
 .lightbox {
@@ -1135,7 +1171,6 @@ body.lightbox-open {
 	width: 100%;
 	height: 100%;
 	background: rgba(0,0,0,.9);
-	transition: opacity .3s ease, visibility .3s ease;
 }
 
 .lightbox--active {
