--- a/src/_includes/partials/schema-localbusiness.liquid
+++ b/src/_includes/partials/schema-localbusiness.liquid
@@ -11,14 +11,16 @@
 	"priceRange": "29900 HUF",
 	"address": {
 		"@type": "PostalAddress",
+		"streetAddress": "Rózsakert utca 19/C",
+		"postalCode": "1223",
 		"addressLocality": "Budapest",
 		"addressRegion": "Pest megye",
 		"addressCountry": "HU"
 	},
 	"geo": {
 		"@type": "GeoCoordinates",
-		"latitude": "47.4979",
-		"longitude": "19.0402"
+		"latitude": "47.405104",
+		"longitude": "19.006075"
 	},
 	"openingHoursSpecification": [{
 		"@type": "OpeningHoursSpecification",
