--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -7,6 +7,7 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<meta name="description" content="12 profi kép aznapi kézbesítéssel. Hirdetéshez optimalizált fotók, gyorsabb eladás, kevesebb alkudozás.">
 		<link rel="canonical" href="https://hasznaltautofotozas.hu/">
+		<meta name="robots" content="max-image-preview:large">
 
 		<!-- Styles -->
 		<link rel="preload" href="/assets/css/style.css" as="style" onload="this.rel='stylesheet'">
