--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -6,7 +6,7 @@ eleventyExcludeFromCollections: true
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
 {%- for page in collections.all %}
 	<url>
-		<loc>https://hasznaltautofotozas.hu{{ page.url | url }}</loc>
+		<loc>https://hasznaltautofotozas.hu{{ page.url | url | replace("index.html", "") }}</loc>
 		<lastmod>{{ page.date.toISOString() }}</lastmod>
 	</url>
 {%- endfor %}
