--- a/src/_includes/partials/schema-person.liquid
+++ b/src/_includes/partials/schema-person.liquid
@@ -2,17 +2,13 @@
 {
 	"@context": "https://schema.org",
 	"@type": "Person",
-	"name": "Szabó Roland",
-	"jobTitle": "Fotós",
-	"url": "https://rolandszabo.photo/",
-	"image": "https://hasznaltautofotozas.hu/assets/images/roland.webp",
-	"description": "Szabó Roland budapesti fotós, aki abban hisz, hogy egy jó kép nemcsak szép, hanem értéket is teremt – legyen szó autókról, portrékról vagy személyes márkákról.",
-	"telephone": "+36205914620",
-	"email": "hi@rolandszabo.photo",
-	"sameAs": [
-		"https://facebook.com/szaboka89",
-		"https://www.linkedin.com/in/szaboka",
-		"https://www.instagram.com/rolandszabophoto"
-	]
+	"name": "{{ site.author.name }}",
+	"jobTitle": "{{ site.author.jobTitle }}",
+	"url": "{{ site.url }}/",
+	"image": "{{ site.url }}/assets/images/roland.webp",
+	"description": "{{ site.description_person }}",
+	"telephone": "{{ site.author.telephone }}",
+	"email": "{{ site.author.email }}",
+	"sameAs": {{ site.author.sameAs | jsonify }}
 }
 </script>
