--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1255,7 +1255,7 @@ body.lightbox-open {
 
 /* Utility Classes */
 
-[hidden] { display: none !important; }
+.hidden, [hidden] { display: none !important; }
 
 .mt-0 { margin-top: 0; }
 .mt-1 { margin-top: 1rem; }
