--- a/src/_includes/partials/privacy-policy.html
+++ b/src/_includes/partials/privacy-policy.html
@@ -42,5 +42,5 @@
 			<li><strong>Weboldal:</strong> www.naih.hu</li>
 		</ul>
 	</div>
-	<a class="modal__close" onclick="closeModal()"><i class="fas fa-times"></i></a>
+	<a class="modal__close" onclick="closeModal()"><i class="fas fa-xmark"></i></a>
 </dialog>
