--- a/src/_includes/partials/lightbox.html
+++ b/src/_includes/partials/lightbox.html
@@ -5,8 +5,8 @@
 		<img class="lightbox__image lightbox__image--current">
 		<img class="lightbox__image lightbox__image--next">
 		<figcaption class="lightbox__caption"></figcaption>
-		<button class="lightbox__close" aria-label="Close"><i class="fas fa-xmark"></i></button>
-		<button class="lightbox__arrow lightbox__arrow--prev" aria-label="Previous"><i class="fas fa-caret-left"></i></button>
-		<button class="lightbox__arrow lightbox__arrow--next" aria-label="Next"><i class="fas fa-caret-right"></i></button>
+		<button class="lightbox__close" title="Bezárás" aria-label="Bezárás"><i class="fas fa-xmark"></i></button>
+		<button class="lightbox__arrow lightbox__arrow--prev" title="Előző kép" aria-label="Előző kép"><i class="fas fa-caret-left"></i></button>
+		<button class="lightbox__arrow lightbox__arrow--next" title="Következő kép" aria-label="Következő kép"><i class="fas fa-caret-right"></i></button>
 	</div>
 </div>
