--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -693,6 +693,7 @@ figcaption {
 	cursor: pointer;
 	width: 1rem;
 	height: 1rem;
+	margin: .5rem;
 	padding: .75rem;
 	border: none;
 	border-radius: 50%;
