--- a/src/_includes/partials/privacy-policy.html
+++ b/src/_includes/partials/privacy-policy.html
@@ -15,7 +15,6 @@
 			<li>telefonszám</li>
 			<li>autó típusa</li>
 		</ul>
-		<p>Más adatot nem gyűjtök. Hírlevél nincs, sütiket (cookie) nem használok.</p>
 		<h3>3. Az adatkezelés célja</h3>
 		<p>Az adatok kezelésének célja kizárólag a kapcsolatfelvétel, időpont-egyeztetés és szolgáltatásaimmal kapcsolatos kommunikáció.</p>
 		<h3>4. Az adatkezelés jogalapja</h3>
@@ -41,6 +40,18 @@
 			<li><strong>Email:</strong> ugyfelszolgalat@naih.hu</li>
 			<li><strong>Weboldal:</strong> www.naih.hu</li>
 		</ul>
+		<h3>9. Sütik (cookie-k) és analitikai eszközök</h3>
+		<p>A weboldal a Meta Platforms Ireland Ltd. (“Meta”, korábban Facebook) által üzemeltetett Meta Pixel nevű mérőkódot használ.</p>
+		<p>A Meta Pixel segít mérni a hirdetések teljesítményét, valamint lehetőséget biztosít a látogatók visszajelzései alapján hirdetések optimalizálására és remarketingre.</p>
+		<p>A Meta Pixel csak akkor aktiválódik, ha a látogató ehhez hozzájárul a sütikezelő felületen (“Elfogadom” gomb megnyomásával). Hozzájárulás nélkül a Pixel nem töltődik be, és semmilyen adatot nem továbbít.</p>
+		<p>A Meta Pixel használata során az alábbi típusú adatok kerülhetnek továbbításra a Meta felé:</p>
+		<ul class="list">
+			<li>IP-cím és böngésző adatok (anonimizált módon),</li>
+			<li>a megtekintett oldalak URL-je,</li>
+			<li>az oldalon végzett interakciók (pl. űrlap elküldése, gombkattintás).</li>
+		</ul>
+		<p>A Meta ezeket az adatokat a saját adatvédelmi szabályzata szerint kezeli: <a href="https://www.facebook.com/privacy/policy">https://www.facebook.com/privacy/policy</a>.</p>
+		<p>A sütik kezelését és engedélyezését bármikor módosíthatod a böngésződ beállításaiban, illetve a weboldalon megjelenő sütikezelő felületen.</p>
 	</div>
 	<a class="modal__close js-prevent-default" href="#" onclick="closeModal()" title="Bezárás" aria-label="Bezárás"><i class="fas fa-xmark"></i></a>
 </dialog>
