--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -14,6 +14,9 @@
 		<link rel="preload" href="/assets/css/style.css" as="style" onload="this.rel='stylesheet'">
 		<noscript><link rel="stylesheet" href="/assets/css/style.css"></noscript>
 
+		<!-- Scripts -->
+		<script src="/assets/js/main.js" defer></script>
+
 		<!-- Favicons -->
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
