--- a/src/_includes/partials/privacy-policy.html
+++ b/src/_includes/partials/privacy-policy.html
@@ -1,6 +1,7 @@
 <dialog id="adatkezeles" class="modal">
 	<div class="modal__content">
 		<h2 class="modal__title">Adatkezelés</h2>
+
 		<h3>1. Az adatkezelő adatai</h3>
 		<ul class="list">
 			<li><strong>Név:</strong> Szabó Roland egyéni vállalkozó</li>
@@ -8,6 +9,8 @@
 			<li><strong>Email:</strong> <a href="mailto:hi@rolandszabo.photo" target="_blank" rel="noopener noreferrer">hi@rolandszabo.photo</a></li>
 			<li><strong>Telefon:</strong> <a href="tel:+36205914620">+36 20 591 4620</a></li>
 		</ul>
+
+		<hr>
 		<h3>2. Milyen adatokat kezelek?</h3>
 		<p>A weboldalon található kapcsolatfelvételi űrlap kitöltésekor az alábbi adatokat kérem el:</p>
 		<ul class="list">
@@ -15,14 +18,24 @@
 			<li>telefonszám</li>
 			<li>autó típusa</li>
 		</ul>
+
+		<hr>
 		<h3>3. Az adatkezelés célja</h3>
-		<p>Az adatok kezelésének célja kizárólag a kapcsolatfelvétel, időpont-egyeztetés és szolgáltatásaimmal kapcsolatos kommunikáció.</p>
+		<p>Az adatok kezelésének célja kizárólag a kapcsolatfelvétel, időpont-egyeztetés és a szolgáltatásaimmal kapcsolatos kommunikáció.</p>
+
+		<hr>
 		<h3>4. Az adatkezelés jogalapja</h3>
 		<p>Az adatkezelés jogalapja a GDPR 6. cikk (1) bekezdés b) pontja: az adatkezelés a szerződés teljesítéséhez, illetve a szerződés megkötését megelőző lépésekhez szükséges. <br><em class="text-yellow">(Magyarul: azért kezelem az adatokat, hogy meg tudjuk beszélni a fotózást.)</em></p>
+
+		<hr>
 		<h3>5. Az adatok tárolásának módja és időtartama</h3>
-		<p>A megadott adatokat a Netlify Forms szolgáltatás közvetítésével kapom meg, és azok a Gmail levelezőrendszeremben kerülnek tárolásra. Az adatokat a kapcsolatfelvétel céljának megszűnéséig őrzöm (pl. amíg a fotózás meg nem történik, vagy amíg kéred a törlésüket)</p>
+		<p>A megadott adatokat a Netlify Forms szolgáltatás közvetítésével kapom meg, és azok a Gmail levelezőrendszeremben kerülnek tárolásra. Az adatokat a kapcsolatfelvétel céljának megszűnéséig őrzöm (pl. amíg a fotózás meg nem történik, vagy amíg kéred a törlésüket).</p>
+
+		<hr>
 		<h3>6. Ki fér hozzá az adatokhoz?</h3>
-		<p>Az adatokhoz kizárólag én, Szabó Roland férek hozzá. Harmadik félnek nem adom tovább. Az oldalon Ahrefs Analytics működik, de az nem kapcsolódik a kapcsolatfelvételi űrlaphoz, és nem gyűjt személyes adatokat.</p>
+		<p>Az adatokhoz kizárólag én, Szabó Roland férek hozzá. Harmadik félnek nem adom tovább. Az oldalon az Ahrefs Analytics működik, amely nem kapcsolódik a kapcsolatfelvételi űrlaphoz, és nem gyűjt személyes adatokat.</p>
+
+		<hr>
 		<h3>7. Az érintettek jogai</h3>
 		<p>A GDPR alapján bármikor jogosult vagy:</p>
 		<ul class="list">
@@ -32,26 +45,16 @@
 			<li>tiltakozni az adatkezelés ellen.</li>
 		</ul>
 		<p>Kérésedet a fenti elérhetőségeim bármelyikén jelezheted, és indokolatlan késedelem nélkül teljesítem.</p>
+
+		<hr>
 		<h3>8. Panasz benyújtása</h3>
 		<p>Amennyiben úgy érzed, hogy megsértettem a személyes adataid védelméhez való jogodat, panasszal élhetsz a Nemzeti Adatvédelmi és Információszabadság Hatóságnál (NAIH):</p>
 		<ul class="list">
-			<li><strong>Székhely:</strong> 1055 Budapest, Falk Miksa utca 9-11.</li>
+			<li><strong>Székhely:</strong> 1055 Budapest, Falk Miksa utca 9–11.</li>
 			<li><strong>Telefon:</strong> +36 1 391 1400</li>
 			<li><strong>Email:</strong> ugyfelszolgalat@naih.hu</li>
 			<li><strong>Weboldal:</strong> www.naih.hu</li>
 		</ul>
-		<h3>9. Sütik (cookie-k) és analitikai eszközök</h3>
-		<p>A weboldal a Meta Platforms Ireland Ltd. (“Meta”, korábban Facebook) által üzemeltetett Meta Pixel nevű mérőkódot használ.</p>
-		<p>A Meta Pixel segít mérni a hirdetések teljesítményét, valamint lehetőséget biztosít a látogatók visszajelzései alapján hirdetések optimalizálására és remarketingre.</p>
-		<p>A Meta Pixel csak akkor aktiválódik, ha a látogató ehhez hozzájárul a sütikezelő felületen (“Elfogadom” gomb megnyomásával). Hozzájárulás nélkül a Pixel nem töltődik be, és semmilyen adatot nem továbbít.</p>
-		<p>A Meta Pixel használata során az alábbi típusú adatok kerülhetnek továbbításra a Meta felé:</p>
-		<ul class="list">
-			<li>IP-cím és böngésző adatok (anonimizált módon),</li>
-			<li>a megtekintett oldalak URL-je,</li>
-			<li>az oldalon végzett interakciók (pl. űrlap elküldése, gombkattintás).</li>
-		</ul>
-		<p>A Meta ezeket az adatokat a saját adatvédelmi szabályzata szerint kezeli: <a href="https://www.facebook.com/privacy/policy">https://www.facebook.com/privacy/policy</a>.</p>
-		<p>A sütik kezelését és engedélyezését bármikor módosíthatod a böngésződ beállításaiban, illetve a weboldalon megjelenő sütikezelő felületen.</p>
 	</div>
 	<a class="modal__close js-prevent-default" href="#" onclick="closeModal()" title="Bezárás" aria-label="Bezárás"><i class="fas fa-xmark"></i></a>
 </dialog>
