--- a/src/robots.njk
+++ b/src/robots.njk
@@ -5,6 +5,7 @@ eleventyExcludeFromCollections: true
 
 User-agent: *
 Disallow: /assets/images/before/
+Disallow: /koszonom/
 
 Allow: /assets/images/
 Allow: /assets/images/gallery/
