--- a/src/_includes/partials/schema-slider.liquid
+++ b/src/_includes/partials/schema-slider.liquid
@@ -3,20 +3,23 @@
 	"@context": "https://schema.org",
 	"@type": "ItemList",
 	"itemListElement": [
-		{% for slide in slider %}
+		{%- for item in cars %}
 		{
 			"@type": "ListItem",
-			"position": {{ slide.id }},
+			"position": {{ forloop.index }},
 			"item": {
 				"@type": "ImageObject",
-				"name": "{{ slide.car }} – Before/After fotó",
-				"caption": "Profi autófotózás: {{ slide.car }} – előtte és utána",
-				"contentUrl": "{{ slide.after }}",
-				"thumbnail": "{{ slide.before }}",
-				"representativeOfPage": true
+				"name": "{{ item.car }} – profi fotó",
+				"caption": "{{ item.afterAlt }}: {{ item.car }}",
+				"contentUrl": "{{ item.after }}",
+				"representativeOfPage": true,
+				"thumbnail": {
+					"@type": "ImageObject",
+					"url": "{{ item.after }}"
+				}
 			}
-		}{% if not forloop.last %},{% endif %}
-		{% endfor %}
+		}{% unless forloop.last %},{% endunless %}
+		{%- endfor %}
 	]
 }
 </script>
