--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -11,7 +11,8 @@
 		<link rel="canonical" href="{{ site.url }}/">
 
 		<!-- Styles -->
-		<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+		<link rel="preload" href="/assets/css/style.css" as="style" onload="this.rel='stylesheet'">
+		<noscript><link rel="stylesheet" href="/assets/css/style.css"></noscript>
 
 		<!-- Scripts -->
 		<script src="/assets/js/main.js" defer></script>
