--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -25,20 +25,20 @@ html { box-sizing: border-box; }
 	--sans: 'Lexend', sans-serif;
 	--serif: 'Lora', serif;
 
-	--bg: #2b3036;
-	--bg-dark: #212529;
-	--bg-light: #343a40;
+	--bg: #023047;
+	--bg-dark: #002233;
+	--bg-light: #063f5c;
 
-	--text: #adb5bd;
-	--text-dark: #6c757d;
-	--text-light: #e9ecef;
+	--text: #c2c7cc;
+	--text-dark: #8a9199;
+	--text-light: #e6ecf2;
 
-	--yellow: #ffbf40;
-	--orange: #ff661a;
+	--yellow: #f2a60c;
+	--blue: #29b1cc;
 	--green: #60bf30;
 	--red: #e53939;
 
-	--radial-gradient: radial-gradient(circle, var(--yellow) 0%, var(--orange) 100%);
+	--radial-gradient: radial-gradient(circle, var(--yellow) 0%, var(--blue) 100%);
 }
 
 
@@ -136,7 +136,7 @@ html {
 
 ::selection {
 	color: var(--text-light);
-	background-color: var(--orange);
+	background-color: var(--blue);
 }
 
 body {
@@ -213,10 +213,6 @@ img {
 
 /* Sections */
 
-.section--light {
-	background-color: var(--bg);
-}
-
 @media only screen and (max-width: 767.98px) {
 	.section {
 		padding-top: 3rem;
@@ -229,6 +225,10 @@ img {
 		padding-top: 6rem;
 		padding-bottom: 6rem;
 	}
+}
+
+.section--light {
+	background-color: var(--bg);
 }
 
 .section__title {
@@ -378,7 +378,7 @@ ol.list {
 
 a {
 	cursor: pointer;
-	color: var(--orange);
+	color: var(--blue);
 	white-space: nowrap;
 	text-decoration: none;
 	border-bottom: 1px dashed var(--text);
@@ -428,7 +428,7 @@ figcaption {
 .text-red { color: var(--red); }
 .text-green { color: var(--green); }
 .text-yellow { color: var(--yellow); }
-.text-orange { color: var(--orange); }
+.text-blue { color: var(--blue); }
 
 
 
@@ -446,9 +446,8 @@ figcaption {
 	text-transform: uppercase;
 	border: 0;
 	border-radius: 99rem;
-	background-color: var(--orange);
+	background-color: var(--yellow);
 	transition: background-color .15s;
-	/*background-image: var(--radial-gradient);*/
 }
 
 .btn:hover,
@@ -457,7 +456,7 @@ figcaption {
 }
 
 .btn--secondary {
-	background-color: var(--orange);
+	background-color: var(--blue);
 }
 
 .button-and-link {
@@ -538,24 +537,12 @@ figcaption {
 .hero__grid {
 	display: grid;
 	align-items: center;
-}
-
-@media only screen and (max-width: 991.98px) {
-	.hero__grid {
-		grid-gap: 4rem;
-	}
+	grid-gap: 6rem;
 }
 
 @media only screen and (min-width: 992px) {
 	.hero__grid {
-		grid-template-columns: repeat(2, 1fr);
-		grid-gap: 8rem;
-	}
-}
-
-@media only screen and (min-width: 768px) {
-	.hero__text {
-		padding-bottom: 4rem;
+		grid-template-columns: 3fr 2fr;
 	}
 }
 
@@ -580,13 +567,21 @@ figcaption {
 	}
 }
 
-.hero__title {
-	margin-bottom: 0;
+@media only screen and (max-width: 479.98px) {
+	.hero__title {
+		font-size: 2.5rem;
+	}
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+	.hero__title {
+		font-size: 4rem;
+	}
 }
 
 .hero__highlight {
 	display: block;
-	color: var(--orange);
+	color: var(--yellow);
 }
 
 .hero__highlight--blink:after {
@@ -605,18 +600,57 @@ figcaption {
 	51%, 100% { opacity: 0; }
 }
 
+.checklist {
+	counter-reset: list;
+}
+
 @media only screen and (max-width: 767.98px) {
-	.hero__checklist {
-		margin-top: 3rem;
+	.checklist {
 		margin-bottom: 3rem;
 	}
 }
 
 @media only screen and (min-width: 768px) {
-	.hero__checklist {
-		margin-top: 5rem;
-		margin-bottom: 5rem;
+	.checklist {
+		margin-bottom: 6rem;
 	}
+}
+
+.checklist__item {
+	margin-bottom: 2rem;
+}
+
+@media only screen and (max-width: 767.98px) {
+	.checklist__item {
+		display: grid;
+		align-items: start;
+		grid-template-columns: auto 1fr;
+	}
+}
+
+.checklist__item:before {
+	counter-increment: list;
+	content: counter(list) ".";
+	grid-row: 1 / 3;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	margin-right: .75rem;
+	font-weight: 700;
+	color: var(--yellow);
+	line-height: 1;
+}
+
+
+@media only screen and (max-width: 767.98px) {
+	.checklist__item:before {
+		grid-row: 1 / 3;
+		padding-top: .6rem;
+	}
+}
+
+.checklist__subtitle {
+	color: var(--text-light);
 }
 
 .checklist__icon {
@@ -723,10 +757,73 @@ figcaption {
 
 
 
+/* About */
+
+.about {
+	padding: 2rem 0;
+	background-color: var(--bg-light);
+}
+
+.about__summary {
+	cursor: help;
+	display: grid;
+	grid-template-columns: auto 1fr;
+	grid-gap: 0 2rem;
+	align-items: center;
+}
+
+.about__title {
+	align-self: end;
+	margin: 0;
+	font-family: var(--sans);
+	font-weight: 700;
+}
+
+.about__text {
+	align-self: start;
+	margin-bottom: 0;
+}
+
+@media only screen and (max-width: 575.98px) {
+	.about__text {
+		font-size: 1.4rem;
+	}
+}
+
+.about__image {
+	width: 10rem;
+	height: 10rem;
+	grid-row: 1 / 3;
+	border-radius: 99rem;
+}
+
+.about__content {
+	color: var(--text-light);
+}
+
+@media only screen and (max-width: 767.98px) {
+	.about__content {
+		margin-top: 2rem;
+		padding: 2rem 0 .25rem 2rem;
+		border-left: .5rem solid var(--bg);
+	}
+}
+
+@media only screen and (min-width: 768px) {
+	.about__content {
+		margin-left: 4.5rem;
+		padding: 4rem 0 1rem 6.5rem;
+		border-left: 1rem solid var(--bg);
+	}
+}
+
+
+
 /* Why */
 
 .why-grid {
 	display: grid;
+	margin-top: 5rem;
 }
 
 @media only screen and (max-width: 991.98px) {
@@ -748,6 +845,8 @@ figcaption {
 }
 
 .card__title {
+	font-family: var(--sans);
+	font-weight: 700;
 	margin-top: 0;
 	margin-bottom: .5rem;
 }
@@ -797,8 +896,16 @@ figcaption {
 	box-shadow: rgba(0, 0, 0, .1) 0px 10px 20px, rgba(0, 0, 0, .15) 0px 6px 6px;
 }
 
-.plan--basic {
-	border-top: 1rem solid var(--yellow);
+@media only screen and (max-width: 767.98px) {
+	.plan--basic {
+		border-top: 1rem solid var(--yellow);
+	}
+}
+
+@media only screen and (min-width: 768px) {
+	.plan--basic {
+		border-left: 1rem solid var(--yellow);
+	}
 }
 
 .plan__text {
@@ -826,14 +933,12 @@ figcaption {
 .plan__name {
 	margin-top: 0;
 	margin-bottom: 3rem;
+	font-family: var(--sans);
+	font-weight: 700;
 }
 
 .plan__price {
 	margin-bottom: 0;
-}
-
-.plan__price--old {
-	margin-bottom: 2rem;
 }
 
 .plan__price--new ins {
@@ -902,6 +1007,7 @@ figcaption {
 
 .quotes {
 	display: grid;
+	margin-bottom: 5rem;
 }
 
 @media only screen and (max-width: 767.98px) {
@@ -1091,7 +1197,18 @@ figcaption {
 @media only screen and (min-width: 992px) {
 	.contact-grid {
 		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+	.contact-grid {
 		grid-gap: 4rem;
+	}
+}
+
+@media only screen and (min-width: 1200px) {
+	.contact-grid {
+		grid-gap: 8rem;
 	}
 }
 
