--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -11,8 +11,7 @@
 		<link rel="canonical" href="{{ site.url }}/">
 
 		<!-- Styles -->
-		<link rel="preload" href="/assets/css/style.css" as="style" onload="this.rel='stylesheet'">
-		<noscript><link rel="stylesheet" href="/assets/css/style.css"></noscript>
+		<link rel="stylesheet" href="/assets/css/style.css">
 
 		<!-- Scripts -->
 		<script src="/assets/js/main.js" defer></script>
